--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,8 +7,7 @@ $secondary: #050505;
 $text:#C0C3C5;
 $heading: $white;
 $border:#4B4B4B;
-$bg:#070707;
-
+$bg:#F5C286;
 :root {
     scroll-behavior: auto !important;
 }
