--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -17,6 +17,21 @@ h6 {
     color: $heading;
 }
 
+h2 {
+    text-align: center;
+    text-shadow: 5px 5px 0px #000;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #000;
+    font-size: 90px;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 4.5px;
+}
+
+span {
+    display: inline-block;
+}
+
 p {
     margin: 0;
 }
@@ -65,6 +80,12 @@ input[type=number] {
     appearance: textfield;
 }
 
+.container {
+    @media only screen and (min-width: 1600px) {
+        max-width: 1554px;
+    }
+}
+
 .common {
     &-marquee {
         & .d-flex {
@@ -103,7 +124,8 @@ input[type=number] {
 }
 
 .btn {
-    padding: 13px 24px;
+    // padding: 13px 24px;
+    padding: 13px 39.3px;
     font-size: 18px;
     font-weight: 500;
     line-height: 150%;
@@ -120,14 +142,19 @@ input[type=number] {
 
 // social 
 .social {
+    &-list {
+        gap: 40px;
+    }
     &-link {
-        --width: 48px;
+        --width: 56px;
         width: var(--width);
         height: var(--width);
-        background-color: $primary;
-        color: $heading;
-        box-shadow: 2px 2px 0 $black;
+        background: linear-gradient($bg-gradient);
+        box-shadow: 0px 0px 0px 1px $black;
+        filter: drop-shadow(1px 1px 0px #000);
+        border-radius: 100%;
         @include font-24;
+        color: $heading;
         &:hover {
             box-shadow: 0 0 0;
         }
