desktop issue fixing

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -88,6 +88,8 @@ input[type=number] {
 
 .common {
     &-marquee {
+        position: relative;
+        z-index: 1;
         height: 173px;
         background-color: transparent;
         background-image: url(../img/marquee-bg.png);
