--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
     padding-top: 195px;
-    padding-bottom: 35px;
+    padding-bottom: 86px;
     background-image: url(../img/banner-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -47,7 +47,7 @@
         }
         & img {
             position: absolute;
-            bottom: 0;
+            bottom: -250px;
             right: 0;
         }
     }
