--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -5,6 +5,29 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
+    @include xxl {
+        padding-top: 180px;
+    }
+    @include xl {
+        padding-top: 150px;
+    }
+    @include lg {
+        padding-top: 110px;
+    }
+    @include mmd {
+        padding-top: 80px;
+    }
+    &::after {
+        position: absolute;
+        bottom: -30px;
+        left: 0;
+        width: 100%;
+        height: 44px;
+        background: #E9AF84;
+        filter: blur(10px);
+        content: '';
+    }
     &-title {
         & h2 {
             margin-bottom: 50px;
@@ -20,6 +43,23 @@
             line-height: 110%;
             letter-spacing: 3.35px;
             margin-bottom: 30px;
+            @include xxl {
+                font-size: 60px;
+            }
+            @include xl {
+                font-size: 55px;
+                text-shadow: 4px 4px 0px #000;
+            }
+            @include lg {
+                font-size: 46px;
+                text-shadow: 3px 3px 0px #000;
+                -webkit-text-stroke-width: 1px;
+            }
+            @include mmd {
+                font-size: 46px;
+                text-shadow: 3px 3px 0px #000;
+                -webkit-text-stroke-width: 1px;
+            }
         }
         & p {
             @include font-20;
