--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -26,6 +26,23 @@ h2 {
     font-weight: 700;
     line-height: 110%;
     letter-spacing: 4.5px;
+    @include xxl {
+        font-size: 85px;
+    }
+    @include xl {
+        font-size: 78px;
+        text-shadow: 4px 4px 0px #000;
+    }
+    @include lg {
+        font-size: 60px;
+        text-shadow: 3px 3px 0px #000;
+        -webkit-text-stroke-width: 1px;
+    }
+    @include mmd {
+        font-size: 50px;
+        text-shadow: 2px 2px 0px #000;
+        -webkit-text-stroke-width: 1px;
+    }
 }
 
 span {
@@ -98,6 +115,15 @@ input[type=number] {
         background-position: center;
         margin-top: -44px;
         margin-bottom: -24px;
+        @include xl {
+            height: 150px;
+        }
+        @include lg {
+            height: 120px;
+        }
+        @include mmd {
+            height: 90px;
+        }
         & .d-flex {
             margin-right: 20px;
             gap: 10px;
