--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -6,6 +6,7 @@
     background-size: cover;
     background-position: center;
     position: relative;
+    @include xl {}
     z-index: 1;
     & .style {
         position: absolute;
@@ -14,13 +15,51 @@
         max-width: none;
         width: 100%;
         height: 208px;
+        @include xl {
+            height: 150px;
+        }
+        @include lg {
+            height: 150px;
+        }
+        @include mmd {
+            height: 150px;
+        }
     }
     &-wrap {
         & .img {
             margin-bottom: 40px;
+            @include xl {
+                margin-bottom: 32px;
+            }
+            @include lg {
+                margin-bottom: 24px;
+            }
+            @include mmd {
+                margin-bottom: 20px;
+            }
+            & img {
+                @include xl {
+                    max-width: 260px;
+                }
+                @include lg {
+                    max-width: 260px;
+                }
+                @include mmd {
+                    max-width: 260px;
+                }
+            }
         }
         & .logo {
             margin-bottom: 30px;
+            @include xl {
+                margin-bottom: 26px;
+            }
+            @include lg {
+                margin-bottom: 22px;
+            }
+            @include mmd {
+                margin-bottom: 20px;
+            }
         }
         & p {
             margin-bottom: 30px;
@@ -28,9 +67,27 @@
             font-weight: 500;
             line-height: 170%;
             letter-spacing: 0.48px;
+            @include xl {
+                margin-bottom: 26px;
+            }
+            @include lg {
+                margin-bottom: 22px;
+            }
+            @include mmd {
+                margin-bottom: 20px;
+            }
         }
         & .btn {
             margin-bottom: 40px;
+            @include xl {
+                margin-bottom: 32px;
+            }
+            @include lg {
+                margin-bottom: 24px;
+            }
+            @include mmd {
+                margin-bottom: 20px;
+            }
         }
     }
 }
