--- a/src/assets/scss/_tokenomics.scss
+++ b/src/assets/scss/_tokenomics.scss
@@ -5,6 +5,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    @include xl {
+        padding: 130px 0;
+    }
+    @include lg {
+        padding: 100px 0;
+    }
+    @include mmd {
+        padding: 80px 0;
+    }
     &-title {
         & h2 {
             margin-bottom: 40px;
@@ -24,6 +33,12 @@
             width: max-content;
             margin-right: auto;
             margin-left: auto;
+            @include lg {
+                padding: 12px 24px;
+            }
+            @include mmd {
+                padding: 12px 24px;
+            }
         }
     }
 }
