--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -59,8 +59,10 @@
                 letter-spacing: 7px;
             }
             @include mmd {
-                font-size: 50px;
+                font-size: 70px;
                 margin-bottom: 16px;
+                text-shadow: 7px 7px 0px #000;
+                letter-spacing: 6px;
             }
         }
         & p {
@@ -111,6 +113,10 @@
             @include lg {
                 position: unset;
                 margin: 30px 0;
+            }
+            @include mmd {
+                position: unset;
+                margin: 20px 0;
             }
         }
     }
