--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -5,6 +5,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    @include sm {
+        padding-top: 165px;
+    }
     &-content {
         position: relative;
         & span {
@@ -56,6 +59,7 @@
                 font-size: 80px;
                 margin-bottom: 18px;
                 text-shadow: 8px 8px 0px #000;
+                -webkit-text-stroke: 7px transparent;
                 letter-spacing: 7px;
             }
             @include mmd {
@@ -63,6 +67,7 @@
                 margin-bottom: 16px;
                 text-shadow: 7px 7px 0px #000;
                 letter-spacing: 6px;
+                -webkit-text-stroke: 6px transparent;
             }
         }
         & p {
@@ -128,10 +133,18 @@
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-position: center;
+        @include sm {
+            max-width: 100%;
+            padding: 30px 20px;
+        }
         & h4 {
             color: $text;
             margin-bottom: 27px;
             font-weight: 700;
+            @include sm {
+                font-size: 18px;
+                margin-bottom: 16px;
+            }
         }
         & .f-18 {
             font-size: 18px;
@@ -150,6 +163,10 @@
             background: var(--bbb, linear-gradient($bg-gradient));
             gap: 50px;
             margin-bottom: 18px;
+            @include sm {
+                gap: 20px;
+                margin-bottom: 12px;
+            }
             & .unit {
                 color: $white;
                 font-size: 18px;
@@ -157,6 +174,9 @@
                 line-height: 120%;
                 letter-spacing: 1.62px;
                 margin-bottom: 4px;
+                @include sm {
+                    font-size: 14px;
+                }
             }
             & .time {
                 color: $white;
@@ -164,6 +184,9 @@
                 font-weight: 700;
                 line-height: 120%;
                 letter-spacing: 2.88px;
+                @include sm {
+                    font-size: 24px;
+                }
             }
         }
         & .line {
@@ -188,6 +211,9 @@
             margin-bottom: 28px;
             margin-top: 23px;
             position: relative;
+            @include sm {
+                margin: 16px 0;
+            }
             &::after {
                 position: absolute;
                 top: 50%;
@@ -196,6 +222,9 @@
                 height: 1px;
                 content: '';
                 background: linear-gradient(to left, $gradient);
+                @include sm {
+                    width: 40px;
+                }
             }
             &::before {
                 position: absolute;
@@ -205,6 +234,9 @@
                 height: 1px;
                 content: '';
                 background: linear-gradient(to right, $gradient);
+                @include sm {
+                    width: 40px;
+                }
             }
             & span {
                 line-height: 120%;
@@ -226,16 +258,34 @@
                     font-weight: 500;
                     line-height: 120%;
                     letter-spacing: 0.9px;
+                    @include sm {
+                        padding: 10px 8px;
+                        font-size: 15px;
+                    }
+                    @include ssm {
+                        font-size: 14px;
+                    }
+                    & img {
+                        @include sm {
+                            max-width: 22px;
+                        }
+                    }
                 }
             }
             & .input-box {
                 position: relative;
                 width: calc(50% - 16px);
+                @include sm {
+                    width: calc(50% - 8px);
+                }
                 & img {
                     position: absolute;
                     right: 13px;
                     top: 50%;
                     transform: translate(0, -50%);
+                    @include sm {
+                        max-width: 22px;
+                    }
                 }
             }
             & input {
@@ -244,23 +294,52 @@
                 border-radius: 46px;
                 border: 0;
                 background: transparent;
+                width: 100%;
+                @include sm {
+                    padding: 11px 13px;
+                }
             }
         }
         & .paymentBtn {
             gap: 38px;
             margin-bottom: 28px;
+            @include sm {
+                gap: 8px;
+                margin-bottom: 16px;
+                justify-content: center;
+            }
             & button {
                 & .inner {
                     gap: 28px;
+                    @include sm {
+                        gap: 14px;
+                        font-size: 16px;
+                    }
+                    @include ssm {
+                        font-size: 14px;
+                    }
+                    & img {
+                        @include sm {
+                            max-width: 20px;
+                        }
+                    }
                 }
             }
         }
         & .cardBtn {
             gap: 32px;
             margin-bottom: 36px;
+            @include sm {
+                gap: 16px;
+                justify-content: center;
+                margin-bottom: 10px;
+            }
             & button {
                 margin-bottom: 5px;
                 width: 224px;
+                @include sm {
+                    width: calc(50% - 8px);
+                }
             }
         }
         & .pl {
@@ -272,6 +351,9 @@
                 font-weight: 500;
                 line-height: 120%;
                 letter-spacing: 3.705px;
+                @include sm {
+                    letter-spacing: .7px;
+                }
             }
         }
         & .lastP {
