--- a/src/assets/scss/_tokenomics.scss
+++ b/src/assets/scss/_tokenomics.scss
@@ -14,6 +14,10 @@
     @include mmd {
         padding: 80px 0;
     }
+    @include sm {
+        padding-top: 50px;
+        padding-bottom: 70px;
+    }
     &-title {
         & h2 {
             margin-bottom: 40px;
@@ -41,6 +45,13 @@
             }
             @include mmd {
                 padding: 12px 24px;
+            }
+            @include sm {
+                font-size: 14px;
+                padding: 10px 14px;
+                & img {
+                    max-width: 20px;
+                }
             }
         }
     }
