--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -167,6 +167,9 @@
                 gap: 20px;
                 margin-bottom: 12px;
             }
+            @include ssm {
+                padding: 18px 12px;
+            }
             & .unit {
                 color: $white;
                 font-size: 18px;
@@ -177,6 +180,9 @@
                 @include sm {
                     font-size: 14px;
                 }
+                @include ssm {
+                    font-size: 12px;
+                }
             }
             & .time {
                 color: $white;
@@ -186,6 +192,9 @@
                 letter-spacing: 2.88px;
                 @include sm {
                     font-size: 24px;
+                }
+                @include ssm {
+                    font-size: 20px;
                 }
             }
         }
@@ -225,6 +234,9 @@
                 @include sm {
                     width: 40px;
                 }
+                @include ssm {
+                    display: none;
+                }
             }
             &::before {
                 position: absolute;
@@ -236,6 +248,9 @@
                 background: linear-gradient(to right, $gradient);
                 @include sm {
                     width: 40px;
+                }
+                @include ssm {
+                    display: none;
                 }
             }
             & span {
@@ -263,11 +278,14 @@
                         font-size: 15px;
                     }
                     @include ssm {
-                        font-size: 14px;
+                        font-size: 12px;
                     }
                     & img {
                         @include sm {
                             max-width: 22px;
+                        }
+                        @include ssm {
+                            max-width: 18px;
                         }
                     }
                 }
