--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -109,6 +109,9 @@
             box-shadow: 0 0 0;
         }
     }
+    & .btn {
+        padding: 13px 24px;
+    }
     &-toggler {
         --btn-padding-x: 4px;
         --btn-padding-y: 5px;
