--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -1,6 +1,5 @@
 .banner {
     padding-top: 195px;
-    padding-bottom: 86px;
     background-image: url(../img/banner-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,65 +9,72 @@
     }
     &-content {
         position: relative;
-        & span {
-            color: #170C0B;
-            text-shadow: 3px 3px 0px #000;
-            -webkit-text-stroke-width: 2px;
-            -webkit-text-stroke-color: #000;
-            font-family: $font-2;
-            font-size: 50px;
-            font-weight: 800;
-            line-height: 110%;
-            letter-spacing: 2.5px;
-            margin-bottom: 2px;
-            background: -webkit-linear-gradient($stroke-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-stroke: 4px transparent;
-            @include xxl {
-                font-size: 42px;
+        & .title {
+            text-align: center;
+            margin-bottom: 60px;
+            & span {
+                color: #170C0B;
+                text-shadow: 3px 3px 0px #000;
+                -webkit-text-stroke-width: 2px;
+                -webkit-text-stroke-color: #000;
+                font-family: $font-2;
+                font-size: 50px;
+                font-weight: 800;
+                line-height: 110%;
+                letter-spacing: 2.5px;
+                margin-bottom: 2px;
+                background: -webkit-linear-gradient($stroke-gradient);
+                -webkit-background-clip: text;
+                -webkit-text-stroke: 4px transparent;
+                @include xxl {
+                    font-size: 42px;
+                }
+                @include xl {
+                    font-size: 38px;
+                }
+                @include lg {
+                    font-size: 32px;
+                }
+                @include mmd {
+                    font-size: 28px;
+                }
             }
-            @include xl {
-                font-size: 38px;
-            }
-            @include lg {
-                font-size: 32px;
-            }
-            @include mmd {
-                font-size: 28px;
+            & h1 {
+                text-shadow: 13px 13px 0px #000;
+                font-size: 170px;
+                font-weight: 800;
+                line-height: 110%;
+                letter-spacing: 8.5px;
+                margin-bottom: 30px;
+                background: -webkit-linear-gradient($stroke-gradient);
+                -webkit-background-clip: text;
+                -webkit-text-stroke: 8px transparent;
+                color: $heading;
+                @include xxl {
+                    font-size: 130px;
+                }
+                @include xl {
+                    font-size: 100px;
+                    margin-bottom: 24px;
+                }
+                @include lg {
+                    font-size: 80px;
+                    margin-bottom: 18px;
+                    text-shadow: 8px 8px 0px #000;
+                    -webkit-text-stroke: 7px transparent;
+                    letter-spacing: 7px;
+                }
+                @include mmd {
+                    font-size: 70px;
+                    margin-bottom: 16px;
+                    text-shadow: 7px 7px 0px #000;
+                    letter-spacing: 6px;
+                    -webkit-text-stroke: 6px transparent;
+                }
             }
         }
-        & h1 {
-            text-shadow: 13px 13px 0px #000;
-            font-size: 170px;
-            font-weight: 800;
-            line-height: 110%;
-            letter-spacing: 8.5px;
-            margin-bottom: 30px;
-            background: -webkit-linear-gradient($stroke-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-stroke: 8px transparent;
-            color: $heading;
-            @include xxl {
-                font-size: 130px;
-            }
-            @include xl {
-                font-size: 100px;
-                margin-bottom: 24px;
-            }
-            @include lg {
-                font-size: 80px;
-                margin-bottom: 18px;
-                text-shadow: 8px 8px 0px #000;
-                -webkit-text-stroke: 7px transparent;
-                letter-spacing: 7px;
-            }
-            @include mmd {
-                font-size: 70px;
-                margin-bottom: 16px;
-                text-shadow: 7px 7px 0px #000;
-                letter-spacing: 6px;
-                -webkit-text-stroke: 6px transparent;
-            }
+        & .wrap {
+            padding-left: 150px;
         }
         & p {
             font-size: 22px;
@@ -76,7 +82,7 @@
             line-height: 170%;
             letter-spacing: 1.32px;
             margin-bottom: 55px;
-            max-width: 654px;
+            max-width: 362px;
             @include xl {
                 margin-bottom: 42px;
             }
@@ -89,338 +95,11 @@
                 margin-bottom: 28px;
             }
         }
-        & .btn {
-            margin-bottom: 60px;
-            @include xl {
-                margin-bottom: 50px;
-            }
-            @include lg {
-                margin-bottom: 40px;
-            }
-            @include mmd {
-                margin-bottom: 32px;
-            }
-        }
         & img {
-            position: absolute;
-            bottom: -250px;
-            right: 0;
-            @include xxl {
-                bottom: -215px;
-                right: 40px;
-                max-width: 300px;
-            }
-            @include xl {
-                bottom: -215px;
-                right: -50px;
-                max-width: 200px;
-            }
-            @include lg {
-                position: unset;
-                margin: 30px 0;
-            }
-            @include mmd {
-                position: unset;
-                margin: 20px 0;
-            }
-        }
-    }
-    &-card {
-        max-width: 577px;
-        padding: 47px 48px;
-        font-family: $font-2;
-        background-image: url(../img/banner-card-bg.png);
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-position: center;
-        @include sm {
-            max-width: 100%;
-            padding: 30px 20px;
-        }
-        & h4 {
-            color: $text;
-            margin-bottom: 27px;
-            font-weight: 700;
-            @include sm {
-                font-size: 18px;
-                margin-bottom: 16px;
-            }
-        }
-        & .f-18 {
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 120%;
-            letter-spacing: 1.62px;
-        }
-        & .f-16 {
-            font-size: 16px;
-            line-height: 150%;
-            letter-spacing: 1.44px;
-        }
-        & .date {
-            padding: 18px 27px;
-            border-radius: 18.523px;
-            background: var(--bbb, linear-gradient($bg-gradient));
-            gap: 50px;
-            margin-bottom: 18px;
-            @include sm {
-                gap: 20px;
-                margin-bottom: 12px;
-            }
-            @include ssm {
-                padding: 18px 12px;
-            }
-            & .unit {
-                color: $white;
-                font-size: 18px;
-                font-weight: 600;
-                line-height: 120%;
-                letter-spacing: 1.62px;
-                margin-bottom: 4px;
-                @include sm {
-                    font-size: 14px;
-                }
-                @include ssm {
-                    font-size: 12px;
-                }
-            }
-            & .time {
-                color: $white;
-                font-size: 32px;
-                font-weight: 700;
-                line-height: 120%;
-                letter-spacing: 2.88px;
-                @include sm {
-                    font-size: 24px;
-                }
-                @include ssm {
-                    font-size: 20px;
-                }
-            }
-        }
-        & .line {
-            max-width: 414px;
-            height: 14px;
-            background: $black;
-            border-radius: 50px;
-            margin-bottom: 18px;
-            position: relative;
-            & span {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 93.23%;
-                height: 100%;
-                background-image: linear-gradient($bg-gradient);
-                border-radius: 50px;
-            }
-        }
-        & .llama {
-            gap: 12px;
-            margin-bottom: 28px;
-            margin-top: 23px;
-            position: relative;
-            @include sm {
-                margin: 16px 0;
-            }
-            &::after {
-                position: absolute;
-                top: 50%;
-                left: 0px;
-                width: 92px;
-                height: 1px;
-                content: '';
-                background: linear-gradient(to left, $gradient);
-                @include sm {
-                    width: 40px;
-                }
-                @include ssm {
-                    display: none;
-                }
-            }
-            &::before {
-                position: absolute;
-                top: 50%;
-                right: 0px;
-                width: 92px;
-                height: 1px;
-                content: '';
-                background: linear-gradient(to right, $gradient);
-                @include sm {
-                    width: 40px;
-                }
-                @include ssm {
-                    display: none;
-                }
-            }
-            & span {
-                line-height: 120%;
-                letter-spacing: 4.16px;
-            }
-        }
-        & .Btn {
-            & button,
-            .input-box {
-                padding: 0;
-                border-radius: 46px;
-                border: double 1px transparent;
-                background-image: linear-gradient($bg-gradient), linear-gradient(to left, $gradient);
-                background-origin: border-box;
-                background-clip: content-box, border-box;
-                & .inner {
-                    padding: 13px;
-                    font-size: 18px;
-                    font-weight: 500;
-                    line-height: 120%;
-                    letter-spacing: 0.9px;
-                    @include sm {
-                        padding: 10px 8px;
-                        font-size: 15px;
-                    }
-                    @include ssm {
-                        font-size: 12px;
-                    }
-                    & img {
-                        @include sm {
-                            max-width: 22px;
-                        }
-                        @include ssm {
-                            max-width: 18px;
-                        }
-                    }
-                }
-            }
-            & .input-box {
-                position: relative;
-                width: calc(50% - 16px);
-                @include sm {
-                    width: calc(50% - 8px);
-                }
-                & img {
-                    position: absolute;
-                    right: 13px;
-                    top: 50%;
-                    transform: translate(0, -50%);
-                    @include sm {
-                        max-width: 22px;
-                    }
-                }
-            }
-            & input {
-                padding: 17px 13px;
-                color: $black;
-                border-radius: 46px;
-                border: 0;
-                background: transparent;
-                width: 100%;
-                @include sm {
-                    padding: 11px 13px;
-                }
-            }
-        }
-        & .paymentBtn {
-            gap: 38px;
-            margin-bottom: 28px;
-            @include sm {
-                gap: 8px;
-                margin-bottom: 16px;
-                justify-content: center;
-            }
-            & button {
-                @include transition;
-                position: relative;
-                z-index: 1;
-                overflow: hidden;
-                &::after {
-                    position: absolute;
-                    z-index: -1;
-                    top: 0;
-                    left: -145px;
-                    width: 100%;
-                    height: 100%;
-                    content: '';
-                    background-image: linear-gradient(to left, $gradient);
-                    border-radius: 46px;
-                    @include transition;
-                }
-                &:hover {
-                    &::after {
-                        left: 0;
-                    }
-                }
-                & .inner {
-                    gap: 28px;
-                    @include sm {
-                        gap: 14px;
-                        font-size: 16px;
-                    }
-                    @include ssm {
-                        font-size: 14px;
-                    }
-                    & img {
-                        @include sm {
-                            max-width: 20px;
-                        }
-                    }
-                }
-            }
-        }
-        & .cardBtn {
-            gap: 32px;
-            margin-bottom: 36px;
-            @include sm {
-                gap: 16px;
-                justify-content: center;
-                margin-bottom: 10px;
-            }
-            & button {
-                margin-bottom: 5px;
-                width: 224px;
-                position: relative;
-                overflow: hidden;
-                z-index: 1;
-                @include sm {
-                    width: calc(50% - 8px);
-                }
-                &::after {
-                    position: absolute;
-                    z-index: -1;
-                    top: 0;
-                    left: -220px;
-                    width: 100%;
-                    height: 100%;
-                    content: '';
-                    background-image: linear-gradient(to left, $gradient);
-                    border-radius: 46px;
-                    @include transition;
-                }
-                &:hover {
-                    &::after {
-                        left: 0;
-                    }
-                }
-            }
-        }
-        & .pl {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 11px;
-            & p {
-                font-size: 14.818px;
-                font-weight: 500;
-                line-height: 120%;
-                letter-spacing: 3.705px;
-                @include sm {
-                    letter-spacing: .7px;
-                }
-            }
-        }
-        & .lastP {
-            max-width: 338px;
-            font-size: 16.67px;
-            font-weight: 500;
-            line-height: 150%;
-            letter-spacing: 1.5px;
+            margin-left: 247px;
+            margin-right: 67px;
+            max-width: none;
+            width: 625px;
         }
     }
 }
